--- a/API-gateway/package.json
+++ b/API-gateway/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/server.js",
+    "dev": "nodemon --exec ts-node src/server.ts",
+    "build": "tsc",
+    "test": "jest",
+    "lint": "eslint . --ext .ts"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +21,7 @@
     "helmet": "^8.1.0",
     "http-proxy-middleware": "^3.0.5",
     "joi": "^17.13.3",
+    "nodemon": "^3.1.9",
     "path": "^0.12.7",
     "winston": "^3.17.0"
   },
