--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "helmet": "^8.1.0",
     "http-proxy-middleware": "^3.0.5",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
     "winston": "^3.17.0"
@@ -29,6 +30,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/http-proxy-middleware": "^0.19.3",
+    "@types/jsonwebtoken": "^9.0.9",
     "prettier": "3.5.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
