--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,17 @@
-PORT=3000
-NODE_ENV=development
+PORT=
+NODE_ENV=
 AUTH_SERVICE_URL=
 #list des url des app autorisées
 ALLOWED_ORIGINS=
+# Rate limit
 RATE_LIMIT=100
+# API keys list
 API_KEY_SOURCING=
 API_KEY_BEOUT=
+# JWT config
 JWT_SECRET=
 JWT_EXPIRES=
+# gateway config
+GATEWAY_SECRET=
+GATEWAY_FORWARDER=
+GATEWAY_REAL_IP=
