--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     environment:
       - NODE_ENV=${NODE_ENV:-production}
       - PORT=3000
+      - ALLOWED_ORIGINS=http://localhost:3001
     env_file:
       - .env
     volumes:
